--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>HW JavaScript 10</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
+      <ul class="nav-list">
+        <li class="nav-link"><a href="./1-timer.html">Timer</a></li>
+        <li class="nav-link"><a href="./2-snackbar.html">Snackbar</a></li>
+      </ul>
     </section>
   </body>
 </html>
